# wheelbase

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  components.json  docker-compose.yml  electron-builder.yml  electron.vite.config.ts  mockup-viewer.vite.config.ts  package.json  pnpm-lock.yaml  skills-lock.json  tech-stack.docx  ticket-process-diagram.md  user-stories-phase1.md  vitest.config.ts  vitest.e2e.config.ts
.beads/: metadata.json
.claude/: hookify.python-quality.local.md  hookify.require-quality-before-stop.local.md  hookify.typescript-quality.local.md  settings.json  settings.local.json
.github/: copilot-instructions.md
backend/: alembic.ini  pyproject.toml
backend/app/: config.py  logging_config.py  main.py  middleware.py
backend/app/api/: schemas.py
backend/app/api/routes/: __init__.py  positions.py
backend/app/core/: alerts.py  costbasis.py  lifecycle.py  types.py
backend/app/db/: __init__.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 9868dcc28f18_create_initial_schema.py
backend/app/integrations/: alpaca.py
backend/app/models/: __init__.py
backend/tests/: conftest.py  test_logging.py
backend/tests/api/: test_list_positions.py  test_positions.py
backend/tests/core/: test_costbasis.py  test_lifecycle.py
docs/: FINAL_SUMMARY.txt  README-US5-ANALYSIS.md  US5-ANALYSIS-INDEX.md  US5-QUICK-REFERENCE.md  frontend-perf-reuse-implementation.md  options-trading-expert-persona-research.md  plan-implementation.md  precious-wishing-boole-implementation.md  tech-debt-backlog.md  wheelbase-analysis.md  (+5 more)
(+530 files in other folders)
