[project]
name = "wheelbase"
version = "0.1.0"
description = "Option Wheel Manager — backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "apscheduler>=3.10",
    "alpaca-py>=0.39",
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "testcontainers[postgres]>=4.8",
    "psycopg[binary]>=3.2",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.ruff]
line-length = 100
exclude = ["app/db/migrations/versions/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
